# mymlpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/mymlpy/: __init__.py  activations.py
src/mymlpy/datasets/: __init__.py  _array_dataset.py  _split.py  _tabular_iterator.py  _text_iterator.py  normalizers.py  parsers.py  tabular.py
src/mymlpy/datasets/tabular/: __init__.py
src/mymlpy/linear/: __init__.py  classification.py  regression.py
src/mymlpy/metrics/: __init__.py  regression.py
src/mymlpy/utils/: __init__.py  numpy.py
tests/datasets/: _array_dataset_test.py  _split_test.py  _tabular_iterator_test.py  _text_iterator_test.py  normalizers_test.py  parsers_test.py  tabular_test.py
tests/datasets/resources/: tabular_01.txt  tabular_02.txt  tabular_03.txt
tests/datasets/tabular/: _iterator_test.py
tests/datasets/tabular/resources/: tabular_02.txt
tests/linear/: classification_test.py  regression_test.py
tests/metrics/: regression_test.py
